# NikTrade

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
python/: binance_symbols.json  crypto_connection.py  crypto_historical_data.py  flatbuffer_encoder.py  main.py  python_workflow.txt  requirements.txt  zmq_publisher.py
src/: main.cpp  used_ports.txt
src/core/: BBO.hpp  BinanceBookTickerDecoder.cpp  BinanceBookTickerDecoder.hpp  SymbolRequest.cpp  SymbolRequest.hpp  binance_kline.hpp  data_loader.cpp  data_loader.hpp  tick.hpp  window_state.hpp
src/core/backtest_engines/: Trade.hpp  backtestResults.hpp  macd_vwapBacktester.cpp  macd_vwapBacktester.hpp  macd_vwap_optimizer.cpp  macd_vwap_optimizer.hpp  sma_crossover.cpp  sma_crossover.hpp
src/core/flatbuffers/: binance_bookticker.fbs  binance_kline.fbs
src/core/flatbuffers/Binance/: BookTicker.py  Kline.py  Klines.py  binance_bookticker_generated.h  binance_kline_generated.h
src/core/net/: python_launcher.cpp  python_launcher.hpp  zmq_control_client.cpp  zmq_control_client.hpp  zmq_subscriber.cpp  zmq_subscriber.hpp
src/core/tech_indicators/: ema.cpp  ema.hpp  macd.cpp  macd.hpp  rsi.cpp  rsi.hpp  sma.cpp  sma.hpp  vwap.cpp  vwap.hpp
src/ui/: ui_main.cpp
src/ui/backtest_plots/: macd_vwapBacktester_plot.cpp  macd_vwapBacktester_plot.hpp  sma_crossover_plot.cpp  sma_crossover_plot.hpp
src/ui/core/: init.cpp  init.hpp
src/ui/plots/: ema_plot.cpp  ema_plot.hpp  macd_plot.cpp  macd_plot.hpp  price_plot.cpp  price_plot.hpp  rsi_plot.cpp  rsi_plot.hpp  sma_plot.cpp  sma_plot.hpp  vwap_plot.cpp  vwap_plot.hpp
src/ui/windows/: banner_window.cpp  banner_window.hpp  chartDIsplay_window.cpp  chartDisplay_window.hpp  cryptoChartDisplay_window.cpp  cryptoChartDisplay_window.hpp  cryptoDataDisplay_window.cpp  cryptoDataDisplay_window.hpp  dataDisplay_window.cpp  dataDisplay_window.hpp  main_window.cpp  main_window.hpp  orderBookDisplay_window.cpp  orderBookDisplay_window.hpp
src/utils/: file_logger.cpp  file_logger.hpp
